<resources>
    <string name="app_name">AstroTasker</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="back_to_log_in">Back To Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="categories">
        <item>Work</item>
        <item>Home</item>
        <item>Learn</item>
        <item>Personal</item>
    </string-array>

    <string name="category_prompt">Select a category</string>
</resources>