<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createProfileLogoIV"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/firstNameET"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:paddingHorizontal="15dp"
            android:textColor="#605C5C"
            android:textColorHint="#605C5C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lastNameET"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            android:paddingHorizontal="15dp"
            android:textColor="#605C5C"
            android:textColorHint="#605C5C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameET" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="15dp"
            android:textColor="#605C5C"
            android:textColorHint="#605C5C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameET" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            android:textColor="#605C5C"
            android:textColorHint="#605C5C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailET" />

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingHorizontal="15dp"
            android:textColor="#605C5C"
            android:textColorHint="#605C5C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameET" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#1E1E1E"
        android:fontFamily="@font/roboto_condensed_regular"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textColor="#B4B4B4"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/backToLogInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backToLogInButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#1E1E1E"
        android:fontFamily="@font/roboto_condensed_regular"
        android:onClick="backToLogIn"
        android:text="@string/back_to_log_in"
        android:textColor="#B4B4B4"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/createProfileLogoIV"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_no_text" />

</androidx.constraintlayout.widget.ConstraintLayout>